--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,14 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+body{
+    background-color: #FFFFFF;
+    margin: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+hr{
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
 }
