--- a/src/components/HomeCaption/HomeCaption.css
+++ b/src/components/HomeCaption/HomeCaption.css
@@ -1,15 +1,21 @@
-.caption{
+.outer-caption{
     padding: 0px 10px 34px 10px;
-    display: flex;
-    justify-content: space-between;
-    background-color: white;
 
     font-family: "Arial";
     font-size: 16px;
     font-style: normal;
     font-variant: normal;
     font-weight: 700;
+
+    transition: 0.4s;
 }
+
+.inner-caption{
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+}
+
 
 .caption-left{
     float: left
@@ -19,8 +25,8 @@
     display: flex;
 }
 
-.caption-expand{
-
+.caption-expand-pointer{
+    cursor: pointer;
 }
 
 .caption-title{
@@ -33,4 +39,18 @@
 
 .caption-year{
     padding-left: 70px;
+}
+
+
+.caption-description{
+    font-weight: normal;
+    text-align: justify;
+}
+
+.view-project{
+    font-weight: 700;
+    text-align: right;
+    display: block;
+    color: black;
+    text-decoration: none;
 }
