--- a/src/components/HomeCaption/HomeCaption.css
+++ b/src/components/HomeCaption/HomeCaption.css
@@ -30,15 +30,15 @@
 }
 
 .caption-title{
-    padding-left: 140px;
+    padding-left: 13vw;
 }
 
 .caption-medium{
-    padding-left: 35px;
+    padding-left: 3.25vw;
 }
 
 .caption-year{
-    padding-left: 70px;
+    padding-left: 6,5vw;
 }
 
 
